hphp/hack/test/extended_reasons/intersection_subtyping_r.php
<?hh

interface I {}
class A {}
class C extends A {}

function inter_r(C $c) : (A & I) {
  return $c;
}
